Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19867

fix mysqldump to by default not copy S3 tables

    XMLWordPrintable

Details

    Description

      There should be two options when coping S3 tables with mysqldump (should be a startup option --copy_s3_tables, boolean, default no)
      1) Ignore all tables with engine S3, as the data is already safe in S3 and any computer where you restore the backup will automatically discover the S3 table.
      2) Copy the table as a normal table with the following 2 changes:

      • Change ENGINE=S3 to ENGINE=ARIA;
      • After copy add to log 'ALTER TABLE table_name ENGINE=S3'

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              vlad.lesin Vladislav Lesin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 20m
                  20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.